--- a/lms_ssimt/pubspec.yaml
+++ b/lms_ssimt/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   carousel_slider: ^5.0.0
   flutter_launcher_icons: ^0.14.3
+  curved_navigation_bar: ^1.0.6
 
 dev_dependencies:
   flutter_test:
