--- a/lms_ssimt/pubspec.yaml
+++ b/lms_ssimt/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   carousel_slider: ^5.0.0
   flutter_launcher_icons: ^0.14.3
   curved_navigation_bar: ^1.0.6
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
